...
            }
        }
        self.attendeesLabel.text = attendeesString
        self.attendeesLabel.textColor = UIColor.darkText
        // For UI tests
        if event.eventDateLocal == "2018-03-29" {
            self.accessibilityIdentifier = "Mar-29-Test-TableCell"
        }
    }
    
    override func prepareForReuse() {
        super.prepareForReuse()
        self.startTimeLabel.text = nil
...
