...
    init(style: UITableViewStyle, dates: [Date]) {
        self.dates = dates
        self.selectedDate = Calendar.current.startOfDay(for: Date())
        self.dataSource = []
        super.init(style: style)
        // TODO - Move this to a constants view so it can be used in tests
        self.tableView.accessibilityIdentifier = "Agenda-View"
    }
    
    func setUpData() {
        self.dataSource.removeAll()
        self.dates.forEach( { (date: Date) in
            let formatter = DateFormatter()
...
