...
        self.collectionView?.isScrollEnabled = true
        self.collectionView?.backgroundColor = UIColor.clear
        // Set height constraint for the collection view
        // TODO - Put these into a constants file, so it could also be used in test files
        self.heightConstraint = UXUtil.createHeightConstraint(self.view, height: 150)
        // TODO - Move this to a constants file to be used by test
        self.collectionView?.accessibilityIdentifier = "Calendar-View"
    }

    required init?(coder aDecoder: NSCoder) {
        fatalError("init(coder:) has not been implemented")
    }
    
...
